--- a/main.css
+++ b/main.css
@@ -1,6 +1,19 @@
 @charset "utf-8";
-body {font-family: arial;}
-h1{background-color:#CCC; border: 1px solid; color:#39F; text-align: left; }
-table{background-color: #F60; border: 1px solid #39F; width: 100%;}
-td{border: 0px; text-align: left;}
-p{color:#09F;text-indent: 20px;}
+/* CSS Document */
+
+body { font-family: Constantia, "Lucida Bright", "DejaVu Serif", Georgia, serif; background: #58FAD0; }
+
+#pageHeader { background-color: #CED8F6; color: #0404B4; padding: 25px 10px 25px; font-size:36px; font-style:italic; margin-left:auto }
+
+#wrapper { position: relative; top: 75px; width: 800px; height: 700px; margin-left: auto; margin-right: auto; border: 2px solid #5781a7; background-color: #ffffff; border-radius: 5px; }
+
+div.leftColumn { position: relative; width: 250px; height: 680px; color: #5781a7; background-color: #F8FBEF; padding: 10px 10px 0px 10px; border-top-left-radius: 5px; border-bottom-left-radius: 5px; margin: 0px 25px 0px 0px; font-size: .9em; float: left; }
+div.leftColumn h1 { font-size: 2em; }
+
+
+img.photoOfMe { margin-left: 5px; border: none; }
+
+div.bodySection { padding: 10px 10px 0px 250px; margin: 0px 0px 0px 25px; font-size: .9em;}
+div.bodySection p { padding-left: 45px; }
+div.bodySection h1 { color: #0B0B61; border-bottom: #04B404 solid 2px; }
+hr.clearLeft { visibility: hidden; clear: left; height: 0; }
